--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>🏆 Museu dos Times Brasileiros</h1>
+  <h1>🏆 Museu dos Times Brasileiros - Serie A</h1>
   <p>Escolha um time para visitar sua sala especial:</p>
 
   <div class="grid">
@@ -54,12 +54,12 @@
     <a class="botao" href="gremio.html">Grêmio</a>
     <a class="botao" href="internacional.html">Internacional</a>
     <a class="botao" href="cruzeiro.html">Cruzeiro</a>
-    <a class="botao" href="atleticomg.html">Atlético Mineiro</a>
+    <a class="botao" href="atletico-mg.html">Atlético Mineiro</a>
     <a class="botao" href="bahia.html">Bahia</a>
     <a class="botao" href="fortaleza.html">Fortaleza</a>
     <a class="botao" href="ceara.html">Ceará</a>
     <a class="botao" href="goias.html">Goiás</a>
-    <a class="botao" href="america.html">América Mineiro</a>
+    <a class="botao" href="america-mg.html">América Mineiro</a>
   </div>
 </body>
 </html>
