--- a/america-mg.html
+++ b/america-mg.html
@@ -48,7 +48,7 @@
   <img src="https://www.stadiumguide.com/independencia/" alt="Estádio Independência">
 
   <h2>🛡️ Escudo do América-MG</h2>
-  <img src="https://www.clipartmax.com/middle/m2H7H7N4G6A0m2N4_hd-logo-america-mineiro-fc-logo/" alt="Escudo do América Mineiro">
+  <img src="../imagens/americamineiro0.1.png" alt="Escudo do América Mineiro">
 
   <div class="hino">
     <h2>🎶 Hino do América-MG</h2>
