--- a/atletico-mg.html
+++ b/atletico-mg.html
@@ -13,7 +13,6 @@
     }
     h1 {
       color: #000000;
-      text-shadow: 2px 2px #ffffff;
     }
     img {
       width: 300px;
@@ -48,7 +47,7 @@
   <img src="https://en.wikipedia.org/wiki/Arena_MRV#/media/File:Arena_MRV_-_Atl%C3%A9tico_MG.jpg" alt="Arena MRV">
 
   <h2>🛡️ Escudo do Atlético Mineiro</h2>
-  <img src="https://commons.wikimedia.org/wiki/File:Clube_Atl%C3%A9tico_Mineiro_logo.svg" alt="Escudo do Atlético Mineiro">
+  <img src="../imagens/Atleticomg.png" alt="Escudo do Atlético Mineiro">
 
   <div class="hino">
     <h2>🎶 Hino do Atlético Mineiro</h2>
