--- a/bahia.html
+++ b/bahia.html
@@ -48,7 +48,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:Arena_Fonte_Nova_External_View.jpg" alt="Arena Fonte Nova">
 
   <h2>🛡️ Escudo do Bahia</h2>
-  <img src="https://freebiesupply.com/logos/bahia-logo/" alt="Escudo do Bahia">
+  <img src="../imagens/BAHIA.PNG" alt="Escudo do Bahia">
 
   <div class="hino">
     <h2>🎶 Hino do Bahia</h2>
