--- a/botafogo.html
+++ b/botafogo.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Est%C3%A1dio_Nilton_Santos_2017.jpg" alt="Estádio Nilton Santos">
 
   <h2>🛡️ Escudo do Botafogo</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Botafogo_de_Futebol_e_Regatas_logo.svg" alt="Escudo do Botafogo">
+  <img src="../imagens/BOTAFOGO.PNG" alt="Escudo do Botafogo">
 
   <div class="hino">
     <h2>🎶 Hino do Botafogo</h2>
