--- a/ceara.html
+++ b/ceara.html
@@ -48,7 +48,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:EstadioPesidenteVargas.JPG" alt="Estádio Presidente Vargas">
 
   <h2>🛡️ Escudo do Ceará</h2>
-  <img src="https://freebiesupply.com/logos/ceara-logo/" alt="Escudo do Ceará Sporting Club">
+  <img src="../imagens/CEARA.PNG" alt="Escudo do Ceará Sporting Club">
 
   <div class="hino">
     <h2>🎶 Hino do Ceará</h2>
