--- a/corinthians.html
+++ b/corinthians.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Arena_Corinthians_2014.jpg" alt="Neo Química Arena">
 
   <h2>🛡️ Escudo do Corinthians</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/pt/9/9f/Corinthians_logo.svg" alt="Escudo do Corinthians">
+  <img src="../imagens/corinthians.PNG" alt="Escudo do Corinthians">
 
   <div class="hino">
     <h2>🎶 Hino do Corinthians</h2>
