--- a/cruzeiro.html
+++ b/cruzeiro.html
@@ -48,7 +48,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:Mineirao_stadium.jpg" alt="Estádio Mineirão">
 
   <h2>🛡️ Escudo do Cruzeiro</h2>
-  <img src="https://en.wikipedia.org/wiki/File:Cruzeiro_Esporte_Clube_(logo).svg" alt="Escudo do Cruzeiro">
+  <img src="../imagens/cruzeiro.png" alt="Escudo do Cruzeiro">
 
   <div class="hino">
     <h2>🎶 Hino do Cruzeiro</h2>
