--- a/flamengo.html
+++ b/flamengo.html
@@ -37,7 +37,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Maracan%C3%A3_Stadium_Rio_de_Janeiro.jpg" alt="Estádio Maracanã">
 
   <h2>🛡️ Escudo do Flamengo</h2>
-  <img src="https://seeklogo.com/images/C/clube-de-regatas-do-flamengo-logo-32416F1E3D-seeklogo.com.png" alt="Escudo do Flamengo">
+  <img src="../imagens/flamengo.png" alt="Escudo do Flamengo">
 
   <h2>🎶 Hino do Flamengo</h2>
   <p>"Uma vez Flamengo, sempre Flamengo<br>
