--- a/fluminense.html
+++ b/fluminense.html
@@ -13,7 +13,6 @@
     }
     h1 {
       color: #990000;
-      text-shadow: 1px 1px #ffffff;
     }
     img {
       width: 300px;
@@ -48,7 +47,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Est%C3%A1dio_Nilton_Santos_2017.jpg" alt="Estádio do Maracanã">
 
   <h2>🛡️ Escudo do Fluminense</h2>
-  <img src="https://commons.wikimedia.org/wiki/File:Fluminense_FC_escudo.png#/media/File:Fluminense_FC_escudo.png" alt="Escudo do Fluminense">
+  <img src="../imagens/FLUMINENSE.PNG" alt="Escudo do Fluminense">
 
   <div class="hino">
     <h2>🎶 Hino do Fluminense</h2>
