--- a/fortaleza.html
+++ b/fortaleza.html
@@ -48,7 +48,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:Arena_Castel%C3%A3o_5.jpg" alt="Estádio Castelão">
 
   <h2>🛡️ Escudo do Fortaleza</h2>
-  <img src="https://seeklogo.com/vector-logo/281975/fortaleza-esporte-clube" alt="Escudo do Fortaleza">
+  <img src="../imagens/fortaleza.png" alt="Escudo do Fortaleza">
 
   <div class="hino">
     <h2>🎶 Hino do Fortaleza</h2>
