--- a/goias.html
+++ b/goias.html
@@ -48,7 +48,7 @@
   <img src="https://esmeraldino.com/estadio-de-goias/" alt="Estádio da Serrinha">
 
   <h2>🛡️ Escudo do Goiás</h2>
-  <img src="https://worldvectorlogo.com/logo/goias-ec-go" alt="Escudo do Goiás EC">
+  <img src="../imagens/goias.png" alt="Escudo do Goiás EC">
 
   <div class="hino">
     <h2>🎶 Hino do Goiás</h2>
