--- a/gremio.html
+++ b/gremio.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Arena_do_Gr%C3%AAmio.jpg" alt="Arena do Grêmio">
 
   <h2>🛡️ Escudo do Grêmio</h2>
-  <img src="https://commons.wikimedia.org/wiki/File:Gremio_logo.svg" alt="Escudo do Grêmio">
+  <img src="../imagens/gremio.png" alt="Escudo do Grêmio">
 
   <div class="hino">
     <h2>🎶 Hino do Grêmio</h2>
