--- a/palmeiras.html
+++ b/palmeiras.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Allianz_Parque_-_Palmeiras.jpg" alt="Allianz Parque">
 
   <h2>🛡️ Escudo do Palmeiras</h2>
-  <img src="https://seeklogo.com/images/P/palmeiras-futebol-clube-logo-430230A5E1-seeklogo.com.png" alt="Escudo do Palmeiras">
+  <img src="../imagens/palmeiras.png" alt="Escudo do Palmeiras">
 
   <div class="hino">
     <h2>🎶 Hino do Palmeiras</h2>
