--- a/parana.html
+++ b/parana.html
@@ -37,7 +37,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:Vila_panoramica.jpg" alt="Estádio Vila Capanema">
 
   <h2>🛡️ Escudo do Paraná Clube</h2>
-  <img src="https://freebiesupply.com/logos/parana-clube-de-curitiba-pr-logo/" alt="Escudo do Paraná Clube">
+  <img src="../imagens/parana.png" alt="Escudo do Paraná Clube">
 
   <h2>🎶 Hino do Paraná</h2>
   <p>"Paraná, Clube da emoção<br>
