--- a/santos.html
+++ b/santos.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Est%C3%A1dio_Urbano_Caldeira.jpg" alt="Estádio Vila Belmiro">
 
   <h2>🛡️ Escudo do Santos</h2>
-  <img src="https://commons.wikimedia.org/wiki/File:Santos_logo.svg" alt="Escudo do Santos FC">
+  <img src="../imagens/santos.png" alt="Escudo do Santos FC">
 
   <div class="hino">
     <h2>🎶 Hino do Santos</h2>
