--- a/saopaulo.html
+++ b/saopaulo.html
@@ -48,7 +48,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Est%C3%A1dio_do_Morumbi.jpg" alt="Estádio do Morumbi">
 
   <h2>🛡️ Escudo do São Paulo FC</h2>
-  <img src="https://seeklogo.com/free-vector-logos/sao-paulo" alt="Escudo do São Paulo FC">
+  <img src="../imagens/SAO PAULO.PNG" alt="Escudo do São Paulo FC">
 
   <div class="hino">
     <h2>🎶 Hino do São Paulo</h2>
