--- a/vasco.html
+++ b/vasco.html
@@ -12,8 +12,7 @@
       padding: 30px;
     }
     h1 {
-      color: #990000;
-      text-shadow: 2px 2px #ffffff;
+      color: #f4eeee;
     }
     img {
       width: 300px;
@@ -48,7 +47,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/S%C3%A3o_Janu%C3%A1rio_2020.jpg" alt="Estádio São Januário">
 
   <h2>🛡️ Escudo do Vasco da Gama</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/pt/9/98/CR_Vasco_da_Gama.svg" alt="Escudo do Vasco da Gama">
+  <img src="../imagens/vasco.png" alt="Escudo do Vasco da Gama">
 
   <div class="hino">
     <h2>🎶 Hino do Vasco</h2>
