--- a/atletico.html
+++ b/atletico.html
@@ -37,7 +37,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Arena_da_Baixada_-_panoramica.jpg" alt="Arena da Baixada">
 
   <h2>🛡️ Escudo do Athletico</h2>
-  <img src="https://seeklogo.com/images/A/athletico-paranaense-logo-343786E5E1-seeklogo.com.png" alt="Escudo do Athletico Paranaense">
+  <img src="../imagens/Athletico.png" alt="Escudo do Athletico Paranaense">
 
   <h2>🎶 Hino do Athletico</h2>
   <p>"Athletico! Athletico! Vai pra cima com raça e amor..."</p>
