--- a/coritiba.html
+++ b/coritiba.html
@@ -29,7 +29,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Est%C3%A1dio_Couto_Pereira.jpg" alt="Estádio Couto Pereira">
 
   <h2>🛡️ Escudo do Coritiba</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/pt/4/4e/Coritiba_Foot_Ball_Club_logo.svg" alt="Escudo do Coritiba">
+  <img src="../imagens/coritiba.png"
 
   <h2>🎶 Hino do Coritiba</h2>
   <p>"Coritiba, Coritiba... És o time da emoção!"</p>
