--- a/internacional.html
+++ b/internacional.html
@@ -48,7 +48,7 @@
   <img src="https://commons.wikimedia.org/wiki/File:Beira-Rio-Stadium-Porto-Alegre-Brazil.jpg" alt="Estádio Beira-Rio">
 
   <h2>🛡️ Escudo do Internacional</h2>
-  <img src="https://en.m.wikipedia.org/wiki/File:Escudo_do_Sport_Club_Internacional.svg" alt="Escudo do Internacional">
+  <img src="../imagens/INTERNACIONAL.png" alt="Escudo do Internacional">
 
   <div class="hino">
     <h2>🎶 Hino do Internacional</h2>
