--- a/coritiba.html
+++ b/coritiba.html
@@ -29,7 +29,7 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Est%C3%A1dio_Couto_Pereira.jpg" alt="Estádio Couto Pereira">
 
   <h2>🛡️ Escudo do Coritiba</h2>
-  <img src="../imagens/coritiba.png"
+  <img src="../../imagens/coritiba.png"
 
   <h2>🎶 Hino do Coritiba</h2>
   <p>"Coritiba, Coritiba... És o time da emoção!"</p>
@@ -37,3 +37,4 @@
   <p><a href="index.html">🔙 Voltar para a página inicial</a></p>
 </body>
 </html>
+
